Integração do FRONT com a API

--- a/FRONT/src/app/app.component.html
+++ b/FRONT/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-listar></app-listar>
+<!-- componente - header
+componente - navegação -->
+<app-content></app-content>
+<!-- componente - footer -->
