Listar e cadastrar ciclos

--- a/FRONT/src/app/components/views/cadastrar/cadastrar.component.html
+++ b/FRONT/src/app/components/views/cadastrar/cadastrar.component.html
@@ -1,1 +1,10 @@
-<p>cadastrar works!</p>
+
+<label for="data">Data do Ciclo</label>
+<input type="text" name="data" [(ngModel)]="ciclo.data"/>
+
+<br/>
+<button (click)="cadastrar()">Cadastrar</button>
+
+<br/>
+<a routerLink=""> Listar Ciclos </a>
+
