--- a/FRONT/src/app/components/views/listar/listar.component.html
+++ b/FRONT/src/app/components/views/listar/listar.component.html
@@ -1,11 +1,24 @@
-<ul *ngFor="let ciclo of ciclos">
-    <li> {{ ciclo._id }} </li>
-</ul>
+<a routerLink="/ciclo/cadastrar"> Novo Ciclo </a>
 
-<select>
-    <option *ngFor="let ciclo of ciclos"> {{ ciclo._id }} </option>
-</select>
-
-<div>
-    <div *ngFor="let ciclo of ciclos"></div>
-</div>
+<table>
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Data do Ciclo</th>
+      <th>Criado em</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let ciclo of ciclos">
+      <td>
+        {{ ciclo._id }}
+      </td>
+      <td>
+        {{ ciclo.data | date: "MMMM - yyyy" }}
+      </td>
+      <td>
+        {{ ciclo.createdAt | date: "dd/MM/yyyy HH:mm:ss" }}
+      </td>
+    </tr>
+  </tbody>
+</table>
