Template e Material Design

--- a/FRONT/src/app/app.component.html
+++ b/FRONT/src/app/app.component.html
@@ -1,4 +1,2 @@
-<!-- componente - header
-componente - navegação -->
+<app-header></app-header>
 <app-content></app-content>
-<!-- componente - footer -->
