--- a/FRONT/src/app/components/views/listar/listar.component.html
+++ b/FRONT/src/app/components/views/listar/listar.component.html
@@ -1,4 +1,7 @@
-<a routerLink="/ciclo/cadastrar"> Novo Ciclo </a>
+<a mat-raised-button color="warn" routerLink="/ciclo/cadastrar">
+  <mat-icon>event</mat-icon>
+  Novo Ciclo
+</a>
 
 <table>
   <thead>
@@ -14,7 +17,7 @@
         {{ ciclo._id }}
       </td>
       <td>
-        {{ ciclo.data | date: "MMMM - yyyy" }}
+        {{ ciclo.data | date: "MMMM/yyyy" }}
       </td>
       <td>
         {{ ciclo.createdAt | date: "dd/MM/yyyy HH:mm:ss" }}
