--- a/FRONT/src/app/components/template/content/content.component.html
+++ b/FRONT/src/app/components/template/content/content.component.html
@@ -1,1 +1,18 @@
-<router-outlet></router-outlet>
+<!-- Lista de link dentro de uma barra de navegação -->
+<mat-sidenav-container>
+    <mat-sidenav mode="side" opened fixedInViewport="true" fixedTopGap="64">
+        <mat-nav-list>
+            <mat-list-item>
+                <mat-icon class="material-icons-outlined" mat-list-icon>home</mat-icon>
+                <a mat-list-item routerLink="">Home</a>
+            </mat-list-item>
+            <mat-list-item>
+                <mat-icon class="material-icons-outlined" mat-list-icon>payment</mat-icon>
+                <a mat-list-item routerLink="/ciclo/cadastrar">Cadastrar Ciclo</a>
+            </mat-list-item>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
