--- a/FRONT/src/app/components/template/header/header.component.html
+++ b/FRONT/src/app/components/template/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<mat-toolbar color="warn" class="mat-elevation-z4">
+  <span>
+    <a class="link-toolbar" routerLink=""> Ciclos de Pagamento </a>
+  </span>
+</mat-toolbar>
